--- a/12-html-css/day02/day02-ex03.html
+++ b/12-html-css/day02/day02-ex03.html
@@ -26,25 +26,25 @@
 
             <tbody>
                 <tr>
-                    <th class="name">김철수</th>
-                    <th>A</th>
-                    <th>B</th>
-                    <th>C</th>
-                    <th>D</th>
+                    <td class="name">김철수</td>
+                    <td>A</td>
+                    <td>B</td>
+                    <td>C</td>
+                    <td>D</td>
                 </tr>
                 <tr>
-                    <th>박영희</th>
-                    <th>B</th>
-                    <th>C</th>
-                    <th>D</th>
-                    <th>A</th>
+                    <td>박영희</td>
+                    <td>B</td>
+                    <td>C</td>
+                    <td>D</td>
+                    <td>A</td>
                 </tr>
                 <tr>
-                    <th class="name">홍길동</th>
-                    <th>C</th>
-                    <th>D</th>
-                    <th>A</th>
-                    <th>B</th>
+                    <td class="name">홍길동</td>
+                    <td>C</td>
+                    <td>D</td>
+                    <td>A</td>
+                    <td>B</td>
                 </tr>
             </tbody>
 
