--- a/12-html-css/day02/day02-ex03.html
+++ b/12-html-css/day02/day02-ex03.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-    <style>
-        .name{background-color: darkgray;}
-    </style>
-
     <head>
         <meta charset="UTF-8">
         <title>CSS Selectors</title>
+        <style>
+            .name{
+                background-color: darkgray;
+            }
+        </style>
     </head>
     
     <body>
