--- a/12-html-css/day02/day02-ex02.html
+++ b/12-html-css/day02/day02-ex02.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-    <style>
-        .red{
-            color: red
-            }
-    </style>
-
     <head>
         <meta charset="UTF-8">
         <title>CSS Selectors</title>
+        <style>
+            .red{
+                color: red;
+            }
+        </style>
     </head>
     
     <body>
